{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 48,
  "lineage": "5f8ecbc2-1b93-4907-8ede-c5b88f9ce5c9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "pathlogy-ni1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/networkInterfaces/pathlogy-ni1",
            "internal_domain_name_suffix": "e1m3f1hnruwexbqjfipw1kvwnb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/publicIPAddresses/pathlogy-ip",
                "subnet_id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/virtualNetworks/pathlogy-vn/subnets/pathlogy-subnet1"
              }
            ],
            "location": "eastus",
            "name": "pathlogy-ni1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "pathology"
          },
          "dependencies": [
            "azurerm_public_ip.pathlogy-ip",
            "azurerm_resource_group.pathology",
            "azurerm_subnet.pathlogy-subnet1",
            "azurerm_virtual_network.pathlogy-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pathlogy-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/networkSecurityGroups/pathlogy-nsg1",
            "location": "eastus",
            "name": "pathlogy-nsg1",
            "resource_group_name": "pathology",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "pathology-secrule1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pathology"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "pathlogySecurityRule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/networkSecurityGroups/pathlogy-nsg1/securityRules/pathology-secrule1",
            "name": "pathology-secrule1",
            "network_security_group_name": "pathlogy-nsg1",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "pathology",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pathlogy-nsg1",
            "azurerm_resource_group.pathology"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pathlogy-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/publicIPAddresses/pathlogy-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pathlogy-ip",
            "resource_group_name": "pathology",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.pathology"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pathlogy-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/virtualNetworks/pathlogy-vn/subnets/pathlogy-subnet1",
            "name": "pathlogy-subnet1",
            "resource_group_name": "pathology",
            "virtual_network_name": "pathlogy-vn"
          },
          "dependencies": [
            "azurerm_resource_group.pathology",
            "azurerm_virtual_network.pathlogy-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/virtualNetworks/pathlogy-vn/subnets/pathlogy-subnet1",
            "network_security_group_id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/networkSecurityGroups/pathlogy-nsg1",
            "subnet_id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/virtualNetworks/pathlogy-vn/subnets/pathlogy-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.pathlogy-nsg1",
            "azurerm_resource_group.pathology",
            "azurerm_subnet.pathlogy-subnet1",
            "azurerm_virtual_network.pathlogy-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pathlogy-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ecd2d926-8ded-4b2c-8609-2a1f6daab669",
            "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/virtualNetworks/pathlogy-vn",
            "location": "eastus",
            "name": "pathlogy-vn",
            "resource_group_name": "pathology",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/virtualNetworks/pathlogy-vn/subnets/pathlogy-subnet1",
                "name": "pathlogy-subnet1",
                "security_group": "/subscriptions/a60e14d3-9415-4783-ae22-98d895dd008c/resourceGroups/pathology/providers/Microsoft.Network/networkSecurityGroups/pathlogy-nsg1"
              }
            ],
            "tags": {
              "environment": "development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.pathology"
          ]
        }
      ]
    }
  ]
}